--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -4,11 +4,11 @@
 	<link rel="stylesheet" href="../css/style.css">
 
 <meta charset="utf-8">
-<title>Kennashka.com - Kenya's Calculator</title>
+<title>Madar.com - Madar's Calculator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Kennashka's Calculator">
-<meta name="author" content="Kennashka DeSilva">
-<meta name="Keywords" content="kenya calculator, kennashka calculator,
+<meta name="author" content="Madar Saheb">
+<meta name="Keywords" content="Madar calculator, Madar calculator,
  free calculator, calculator app, calculator">
 
  <!-- Bootstrap -->
