--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -37,10 +37,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#projects">Projects</a>
+              <a class="nav-link" href="#">Projects</a>
  
             <li class="nav-item">
-              <a class="nav-link" href="https://app.acuityscheduling.com/schedule.php?owner=16888995&notembedded=1">Contact</a>
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
         </div>
