--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -15,7 +15,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129340722-1"></script>
+<script async src="https://www.freepik.com/premium-photo/top-view-blue-calculator-notepad-color-background_137209"></script>
 
 
 </head>
